more efficient parser & support for pipelining